Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/CRM_Order_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce upon Order inserts and updates</description>
    <label>CRM Order Event - In</label>
    <pluralLabel>CRM_Order_Events - In</pluralLabel>
</CustomObject>