Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/accountId__c.field-meta.xml
<CustomField>
    <fullName>accountId__c</fullName>
    <label>accountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>