Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>