Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/billingAddressFirstName__c.field-meta.xml
<CustomField>
    <fullName>billingAddressFirstName__c</fullName>
    <label>billingAddressFirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>