Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/billingAddressId__c.field-meta.xml
<CustomField>
    <fullName>billingAddressId__c</fullName>
    <label>billingAddressId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>