Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/billingAddressStateProvince__c.field-meta.xml
<CustomField>
    <fullName>billingAddressStateProvince__c</fullName>
    <label>billingAddressStateProvince</label>
    <length>100</length>
    <type>Text</type>
</CustomField>