Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/creditCardId__c.field-meta.xml
<CustomField>
    <fullName>creditCardId__c</fullName>
    <label>creditCardId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>