Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/creditCardTransactionID__c.field-meta.xml
<CustomField>
    <fullName>creditCardTransactionID__c</fullName>
    <description>This is the Credit Card Transaction ID passed in mostly from ECOM.</description>
    <label>creditCardTransactionID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>