Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/invoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>invoiceNumber__c</fullName>
    <label>invoiceNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>