Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/pricebookName__c.field-meta.xml
<CustomField>
    <fullName>pricebookName__c</fullName>
    <label>pricebookName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>