Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/rgaNumber__c.field-meta.xml
<CustomField>
    <fullName>rgaNumber__c</fullName>
    <label>rgaNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>