Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/shippingAddress3__c.field-meta.xml
<CustomField>
    <fullName>shippingAddress3__c</fullName>
    <label>shippingAddress3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>