Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/shippingAddressAccountId__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressAccountId__c</fullName>
    <label>shippingAddressAccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>