Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/shippingAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressCountry__c</fullName>
    <label>shippingAddressCountry</label>
    <length>25</length>
    <type>Text</type>
</CustomField>