Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/shippingAddressId__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressId__c</fullName>
    <label>shippingAddressId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>