Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/shippingAddressStateProvince__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressStateProvince__c</fullName>
    <label>shippingAddressStateProvince</label>
    <length>100</length>
    <type>Text</type>
</CustomField>