Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>