Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/systemOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>systemOfOrigin__c</fullName>
    <label>systemOfOrigin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>