Prod-EU/force-app/main/default/objects/CRM_Order_Event__e/fields/totalAmount__c.field-meta.xml
<CustomField>
    <fullName>totalAmount__c</fullName>
    <label>totalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>